# ExamplePackagePEP517

./: .travis.yml  pyproject.toml  setup.cfg
example_pkg/: main.py
example_pkg/utils/: versiontools.py
tests/: test_sample.py
