[metadata]
name = example-pkg-maxtyulin-pep517
version = attr: example_pkg.utils.versiontools.get_self_version
author = Max Tyulin
author_email = max@tyulin.ru
url = https://github.com/j5ew9/ExamplePackagePEP517
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find_namespace:
python_requires = >=3.5

